[tool.poetry]
name = "once-lifetime"
version = "0.1.0"
description = "A simulation for the card game once in a lifetime."
authors = ["Raymond DeVries"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
